k8s/production/time-ui/deployment.yaml
# API service for discovery and port linking
apiVersion: v1
kind: Service
metadata:
  name: time-ui-svc
  labels:
    app: time-ui
    service: time-ui-svc
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3000
  selector:
    app: time-ui
---
# API endpoint deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-ui-deploy
  labels:
    app: time-ui
    ver: 0.1.0
    environment: production
    release: time-ui-stable
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 2
  selector:
    matchLabels:
      app: time-ui
      ver: 0.1.0
    matchExpressions:
      - {key: environment, operator: In, values: [production]}
  template:
    metadata:
      labels:
        app: time-ui
        ver: 0.1.0
        environment: production
    spec:
      containers:
      - name: time-ui-container
        image: harbor.shared.12factor.xyz/natarajmb/demo-reactjs-time-ui:latest  
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
